--- a/Replaced/genReplacingPattern.ipynb
+++ b/Replaced/genReplacingPattern.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "5573282  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "[781 rows x 773 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
        "[91 rows x 4 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,29 +970,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gen_patters(_patterns:pd.DataFrame) -> list:\n",
-    "  patterns = _patterns.copy()\n",
-    "  res = []\n",
-    "  # loop over the rows in the dataframe\n",
-    "  for row in patterns.iterrows():\n",
-    "      # get the values of the row\n",
-    "      res.append([row[1][0], row[1][1], row[1][2]])\n",
+    "# def gen_patters(_patterns:pd.DataFrame) -> list:\n",
+    "#   patterns = _patterns.copy()\n",
+    "#   res = []\n",
+    "#   # loop over the rows in the dataframe\n",
+    "#   for row in patterns.iterrows():\n",
+    "#       # get the values of the row\n",
+    "#       res.append([row[1][0], row[1][1], row[1][2]])\n",
     "        \n",
     "        \n",
-    "  return res\n",
+    "#   return res\n",
     "\n",
-    "test = gen_patters(patterns_df)\n",
-    "test\n",
-    "markov_result_to_df(test, 'only_patterns','gen_sessions/only_patterns.csv')"
+    "# test = gen_patters(patterns_df)\n",
+    "# test\n",
+    "# markov_result_to_df(test, 'only_patterns','gen_sessions/only_patterns.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1156,6 +1156,86 @@
       "900\n",
       "950\n",
       "1000\n",
+      "1050\n",
+      "1100\n",
+      "1150\n",
+      "1200\n",
+      "1250\n",
+      "1300\n",
+      "1350\n",
+      "1400\n",
+      "1450\n",
+      "1500\n",
+      "1550\n",
+      "1600\n",
+      "1650\n",
+      "1700\n",
+      "1750\n",
+      "1800\n",
+      "1850\n",
+      "1900\n",
+      "1950\n",
+      "2000\n",
+      "2050\n",
+      "2100\n",
+      "2150\n",
+      "2200\n",
+      "2250\n",
+      "2300\n",
+      "2350\n",
+      "2400\n",
+      "2450\n",
+      "2500\n",
+      "2550\n",
+      "2600\n",
+      "2650\n",
+      "2700\n",
+      "2750\n",
+      "2800\n",
+      "2850\n",
+      "2900\n",
+      "2950\n",
+      "3000\n",
+      "3050\n",
+      "3100\n",
+      "3150\n",
+      "3200\n",
+      "3250\n",
+      "3300\n",
+      "3350\n",
+      "3400\n",
+      "3450\n",
+      "3500\n",
+      "3550\n",
+      "3600\n",
+      "3650\n",
+      "3700\n",
+      "3750\n",
+      "3800\n",
+      "3850\n",
+      "3900\n",
+      "3950\n",
+      "4000\n",
+      "4050\n",
+      "4100\n",
+      "4150\n",
+      "4200\n",
+      "4250\n",
+      "4300\n",
+      "4350\n",
+      "4400\n",
+      "4450\n",
+      "4500\n",
+      "4550\n",
+      "4600\n",
+      "4650\n",
+      "4700\n",
+      "4750\n",
+      "4800\n",
+      "4850\n",
+      "4900\n",
+      "4950\n",
+      "5000\n",
       "Sessions Generated\n",
       "done with 5\n",
       "start with rate: 10\n",
@@ -1181,6 +1261,86 @@
       "900\n",
       "950\n",
       "1000\n",
+      "1050\n",
+      "1100\n",
+      "1150\n",
+      "1200\n",
+      "1250\n",
+      "1300\n",
+      "1350\n",
+      "1400\n",
+      "1450\n",
+      "1500\n",
+      "1550\n",
+      "1600\n",
+      "1650\n",
+      "1700\n",
+      "1750\n",
+      "1800\n",
+      "1850\n",
+      "1900\n",
+      "1950\n",
+      "2000\n",
+      "2050\n",
+      "2100\n",
+      "2150\n",
+      "2200\n",
+      "2250\n",
+      "2300\n",
+      "2350\n",
+      "2400\n",
+      "2450\n",
+      "2500\n",
+      "2550\n",
+      "2600\n",
+      "2650\n",
+      "2700\n",
+      "2750\n",
+      "2800\n",
+      "2850\n",
+      "2900\n",
+      "2950\n",
+      "3000\n",
+      "3050\n",
+      "3100\n",
+      "3150\n",
+      "3200\n",
+      "3250\n",
+      "3300\n",
+      "3350\n",
+      "3400\n",
+      "3450\n",
+      "3500\n",
+      "3550\n",
+      "3600\n",
+      "3650\n",
+      "3700\n",
+      "3750\n",
+      "3800\n",
+      "3850\n",
+      "3900\n",
+      "3950\n",
+      "4000\n",
+      "4050\n",
+      "4100\n",
+      "4150\n",
+      "4200\n",
+      "4250\n",
+      "4300\n",
+      "4350\n",
+      "4400\n",
+      "4450\n",
+      "4500\n",
+      "4550\n",
+      "4600\n",
+      "4650\n",
+      "4700\n",
+      "4750\n",
+      "4800\n",
+      "4850\n",
+      "4900\n",
+      "4950\n",
+      "5000\n",
       "Sessions Generated\n",
       "done with 10\n",
       "start with rate: 25\n",
@@ -1206,6 +1366,86 @@
       "900\n",
       "950\n",
       "1000\n",
+      "1050\n",
+      "1100\n",
+      "1150\n",
+      "1200\n",
+      "1250\n",
+      "1300\n",
+      "1350\n",
+      "1400\n",
+      "1450\n",
+      "1500\n",
+      "1550\n",
+      "1600\n",
+      "1650\n",
+      "1700\n",
+      "1750\n",
+      "1800\n",
+      "1850\n",
+      "1900\n",
+      "1950\n",
+      "2000\n",
+      "2050\n",
+      "2100\n",
+      "2150\n",
+      "2200\n",
+      "2250\n",
+      "2300\n",
+      "2350\n",
+      "2400\n",
+      "2450\n",
+      "2500\n",
+      "2550\n",
+      "2600\n",
+      "2650\n",
+      "2700\n",
+      "2750\n",
+      "2800\n",
+      "2850\n",
+      "2900\n",
+      "2950\n",
+      "3000\n",
+      "3050\n",
+      "3100\n",
+      "3150\n",
+      "3200\n",
+      "3250\n",
+      "3300\n",
+      "3350\n",
+      "3400\n",
+      "3450\n",
+      "3500\n",
+      "3550\n",
+      "3600\n",
+      "3650\n",
+      "3700\n",
+      "3750\n",
+      "3800\n",
+      "3850\n",
+      "3900\n",
+      "3950\n",
+      "4000\n",
+      "4050\n",
+      "4100\n",
+      "4150\n",
+      "4200\n",
+      "4250\n",
+      "4300\n",
+      "4350\n",
+      "4400\n",
+      "4450\n",
+      "4500\n",
+      "4550\n",
+      "4600\n",
+      "4650\n",
+      "4700\n",
+      "4750\n",
+      "4800\n",
+      "4850\n",
+      "4900\n",
+      "4950\n",
+      "5000\n",
       "Sessions Generated\n",
       "done with 25\n",
       "start with rate: 50\n",
@@ -1231,6 +1471,86 @@
       "900\n",
       "950\n",
       "1000\n",
+      "1050\n",
+      "1100\n",
+      "1150\n",
+      "1200\n",
+      "1250\n",
+      "1300\n",
+      "1350\n",
+      "1400\n",
+      "1450\n",
+      "1500\n",
+      "1550\n",
+      "1600\n",
+      "1650\n",
+      "1700\n",
+      "1750\n",
+      "1800\n",
+      "1850\n",
+      "1900\n",
+      "1950\n",
+      "2000\n",
+      "2050\n",
+      "2100\n",
+      "2150\n",
+      "2200\n",
+      "2250\n",
+      "2300\n",
+      "2350\n",
+      "2400\n",
+      "2450\n",
+      "2500\n",
+      "2550\n",
+      "2600\n",
+      "2650\n",
+      "2700\n",
+      "2750\n",
+      "2800\n",
+      "2850\n",
+      "2900\n",
+      "2950\n",
+      "3000\n",
+      "3050\n",
+      "3100\n",
+      "3150\n",
+      "3200\n",
+      "3250\n",
+      "3300\n",
+      "3350\n",
+      "3400\n",
+      "3450\n",
+      "3500\n",
+      "3550\n",
+      "3600\n",
+      "3650\n",
+      "3700\n",
+      "3750\n",
+      "3800\n",
+      "3850\n",
+      "3900\n",
+      "3950\n",
+      "4000\n",
+      "4050\n",
+      "4100\n",
+      "4150\n",
+      "4200\n",
+      "4250\n",
+      "4300\n",
+      "4350\n",
+      "4400\n",
+      "4450\n",
+      "4500\n",
+      "4550\n",
+      "4600\n",
+      "4650\n",
+      "4700\n",
+      "4750\n",
+      "4800\n",
+      "4850\n",
+      "4900\n",
+      "4950\n",
+      "5000\n",
       "Sessions Generated\n",
       "done with 50\n",
       "start with rate: 75\n",
@@ -1256,6 +1576,86 @@
       "900\n",
       "950\n",
       "1000\n",
+      "1050\n",
+      "1100\n",
+      "1150\n",
+      "1200\n",
+      "1250\n",
+      "1300\n",
+      "1350\n",
+      "1400\n",
+      "1450\n",
+      "1500\n",
+      "1550\n",
+      "1600\n",
+      "1650\n",
+      "1700\n",
+      "1750\n",
+      "1800\n",
+      "1850\n",
+      "1900\n",
+      "1950\n",
+      "2000\n",
+      "2050\n",
+      "2100\n",
+      "2150\n",
+      "2200\n",
+      "2250\n",
+      "2300\n",
+      "2350\n",
+      "2400\n",
+      "2450\n",
+      "2500\n",
+      "2550\n",
+      "2600\n",
+      "2650\n",
+      "2700\n",
+      "2750\n",
+      "2800\n",
+      "2850\n",
+      "2900\n",
+      "2950\n",
+      "3000\n",
+      "3050\n",
+      "3100\n",
+      "3150\n",
+      "3200\n",
+      "3250\n",
+      "3300\n",
+      "3350\n",
+      "3400\n",
+      "3450\n",
+      "3500\n",
+      "3550\n",
+      "3600\n",
+      "3650\n",
+      "3700\n",
+      "3750\n",
+      "3800\n",
+      "3850\n",
+      "3900\n",
+      "3950\n",
+      "4000\n",
+      "4050\n",
+      "4100\n",
+      "4150\n",
+      "4200\n",
+      "4250\n",
+      "4300\n",
+      "4350\n",
+      "4400\n",
+      "4450\n",
+      "4500\n",
+      "4550\n",
+      "4600\n",
+      "4650\n",
+      "4700\n",
+      "4750\n",
+      "4800\n",
+      "4850\n",
+      "4900\n",
+      "4950\n",
+      "5000\n",
       "Sessions Generated\n",
       "done with 75\n",
       "start with rate: 100\n",
@@ -1281,13 +1681,93 @@
       "900\n",
       "950\n",
       "1000\n",
+      "1050\n",
+      "1100\n",
+      "1150\n",
+      "1200\n",
+      "1250\n",
+      "1300\n",
+      "1350\n",
+      "1400\n",
+      "1450\n",
+      "1500\n",
+      "1550\n",
+      "1600\n",
+      "1650\n",
+      "1700\n",
+      "1750\n",
+      "1800\n",
+      "1850\n",
+      "1900\n",
+      "1950\n",
+      "2000\n",
+      "2050\n",
+      "2100\n",
+      "2150\n",
+      "2200\n",
+      "2250\n",
+      "2300\n",
+      "2350\n",
+      "2400\n",
+      "2450\n",
+      "2500\n",
+      "2550\n",
+      "2600\n",
+      "2650\n",
+      "2700\n",
+      "2750\n",
+      "2800\n",
+      "2850\n",
+      "2900\n",
+      "2950\n",
+      "3000\n",
+      "3050\n",
+      "3100\n",
+      "3150\n",
+      "3200\n",
+      "3250\n",
+      "3300\n",
+      "3350\n",
+      "3400\n",
+      "3450\n",
+      "3500\n",
+      "3550\n",
+      "3600\n",
+      "3650\n",
+      "3700\n",
+      "3750\n",
+      "3800\n",
+      "3850\n",
+      "3900\n",
+      "3950\n",
+      "4000\n",
+      "4050\n",
+      "4100\n",
+      "4150\n",
+      "4200\n",
+      "4250\n",
+      "4300\n",
+      "4350\n",
+      "4400\n",
+      "4450\n",
+      "4500\n",
+      "4550\n",
+      "4600\n",
+      "4650\n",
+      "4700\n",
+      "4750\n",
+      "4800\n",
+      "4850\n",
+      "4900\n",
+      "4950\n",
+      "5000\n",
       "Sessions Generated\n",
       "done with 100\n"
      ]
     }
    ],
    "source": [
-    "gen_all_sessions(deviation_rates,1000)"
+    "gen_all_sessions(deviation_rates,5000)"
    ]
   }
  ],
