--- a/Skipping/Label_Skip.ipynb
+++ b/Skipping/Label_Skip.ipynb
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,11 +1032,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "sessions = find_anomalous_sessions(base_df,skip_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(sessions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a new column in the base_df to indicate if the session is anomalous\n",
+    "# if a session is anomalous it will have a True in the column else False\n",
+    "# labeled_df = base_df.copy()\n",
+    "# labeled_df[\"anomaly\"] = base_df[\"SessionID\"].apply(lambda x: x in sessions)"
    ]
   },
   {
@@ -1048,218 +1069,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[  114491  7750550 10034461 15536769 26494534 28708683 32890902 33597081\n",
-      " 34585045 36768748 39303671 44122579 44246297 44592614 50599136 50648210\n",
-      " 52144674 54593765   469014  3728991  8676664  8755382 17145900 23186071\n",
-      " 27707051 35447332   525807  1047249  3360767  3613894  7161329  8148792\n",
-      " 16540024 25742324 28905573 45862715 52071677   705041  4042470 12151497\n",
-      " 12418692 18138104 18406496 25336276 28720129 28802507 33168353 35546821\n",
-      " 37761106 41181760 45700775 48364807   747053  1057401  1171595  1176096\n",
-      "  2249993  3203332  3451055  5243194  5479088  7859875  9258077 10968312\n",
-      " 11362164 12127041 12220427 12273954 14811620 15625058 16861253 17449269\n",
-      " 17817523 18166469 18685381 19309642 20135221 20233803 20262110 21199706\n",
-      " 21628980 22728643 23645845 24631211 25398349 28437712 28621978 30256200\n",
-      " 30478274 34368837 35127156 39862671 40235372 40570582 42760838 43885456\n",
-      " 45385951 45905898 48166987 48491448 48968011 49907187 50267226 50985376\n",
-      "   827985  2707848  3616994  6003753  9034197 13120807 15567039 29174258\n",
-      " 29260148 32424412 34254223 34872689 35555797 36352181 36675327 40539727\n",
-      " 40862067 42634905 43126209 44686066 48706282 49263894 49749606 50182157\n",
-      "  1193572  1958801  7673967  8980954 13582915 13991652 28289383 28849361\n",
-      " 30839388 46264887 47885930 51065665 52648091  1974320  7000355  7140990\n",
-      " 10339895 20490202 20815658 24922012 25999744 26017913 26735640 26817691\n",
-      " 29134766 30208173 32929716 34063586 34442386 39954149 40043542 40279534\n",
-      " 40715080 41206538 41507943 42754046 42802805 45309083 45437757 45764298\n",
-      " 46458242 46475745 47225932 48796554 50195215 50353360 51250333 52296338\n",
-      " 52372255  2232299  5819405  6986548  7391143 10472054 10646215 11410404\n",
-      " 12476239 15184405 15964883 20113573 21962663 22902804 23484246 23862275\n",
-      " 28378723 32767771 35017577 35588442 36366080 36391225 36458497 39023702\n",
-      " 40018974 44427124 47337030 47957669 48634061 50005631  2520352  4881285\n",
-      "  5534677  6269434  8726697  9252500  9538865 13500714 17983786 20399805\n",
-      " 23166681 28241258 28355814 28858958 29434053 36487334 41540450 51993537\n",
-      "  2846349 23039918 23611326 24814209 28137179 35728893 35786271 37919510\n",
-      " 43861311 49409362 50623714 51098699 53502545 53731626  4102615  7354413\n",
-      " 13073719 14270531 14285990 17736524 18886769 26515140 32887929 34906768\n",
-      " 37518971 40361123 40780336 41618895 43968049 44179310 48853075 50120950\n",
-      " 50950062  5077074  6872963  7213426 34514266 39429032 46464564  5924493\n",
-      "  6888334  8229545  9114516  9239206 10679087 11089597 12076088 16767059\n",
-      " 17887143 21567943 28364054 30742887 36098797 36112069 36929844 47316533\n",
-      " 48918302 48994221 49986025  7007779  8429692 14079123 15700287 19220211\n",
-      " 20679852 24355647 34582743 35835801 36718247 40215059 40391480 40525916\n",
-      " 41440674 42951793 44235005 44394862 47290058 48265632 50367210 51332427\n",
-      " 52625340 52797649 53545456 53617393  8647078 23954545 26433087 36805354\n",
-      " 12388600 36761507 46658854 50543325 15020178 16582427 21255541 30352354\n",
-      " 43806085 48551092 18355682 20349250 23038065 28776541 34345981 42771301\n",
-      " 19302913 34416397 35203166 35642246 35756716 36357296 38980004 42247922\n",
-      " 42596226 44573039 45386960 48755778 49488563 49712896 53543606 19388665\n",
-      " 23032182 23519673 24126616 25126526 26267414 29435492 45419685 26620945\n",
-      " 42773341 32458253 39677471]\n"
+      "done\n"
      ]
     }
    ],
    "source": [
-    "print(sessions)"
+    "import random\n",
+    "\n",
+    "\n",
+    "def label_80(ids:list[int]) -> list[int]:\n",
+    "  sample = random.sample(ids,k=int(0.8*len(ids)))\n",
+    "  return sample\n",
+    "\n",
+    "sample = label_80(list(sessions))\n",
+    "len(sample)\n",
+    "  \n",
+    "labeled_sample = base_df.copy()\n",
+    "labeled_sample[\"anomaly\"] = labeled_sample[\"SessionID\"].apply(lambda x: x in sample)\n",
+    "print('done')\n",
+    "labeled_sample.to_csv(f\"./labeled_data/Skipped_Sample.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create a new column in the base_df to indicate if the session is anomalous\n",
-    "# if a session is anomalous it will have a True in the column else False\n",
-    "labeled_df = base_df.copy()\n",
-    "labeled_df[\"anomaly\"] = base_df[\"SessionID\"].apply(lambda x: x in sessions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SessionID</th>\n",
-       "      <th>TIMESTAMP</th>\n",
-       "      <th>Activity</th>\n",
-       "      <th>anomaly</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3273278</th>\n",
-       "      <td>46</td>\n",
-       "      <td>2015-11-06 08:07:22.780</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5333642</th>\n",
-       "      <td>46</td>\n",
-       "      <td>2015-11-06 08:07:40.767</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/mijn...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3733243</th>\n",
-       "      <td>46</td>\n",
-       "      <td>2015-11-06 08:07:51.390</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5904405</th>\n",
-       "      <td>46</td>\n",
-       "      <td>2015-11-06 08:08:06.003</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5573282</th>\n",
-       "      <td>46</td>\n",
-       "      <td>2015-11-06 08:08:19.343</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1613546</th>\n",
-       "      <td>55314751</td>\n",
-       "      <td>2016-02-28 08:17:15.947</td>\n",
-       "      <td>/werk_nl/werknemer/werkmap</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2925569</th>\n",
-       "      <td>55314751</td>\n",
-       "      <td>2016-02-28 08:18:10.877</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4068602</th>\n",
-       "      <td>55314751</td>\n",
-       "      <td>2016-02-28 08:18:41.493</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5013440</th>\n",
-       "      <td>55314751</td>\n",
-       "      <td>2016-02-28 08:19:59.737</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5012332</th>\n",
-       "      <td>55314751</td>\n",
-       "      <td>2016-02-28 08:20:07.667</td>\n",
-       "      <td>/werk_nl/werknemer/mijn_werkmap/doorgeven/taken</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7174934 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         SessionID               TIMESTAMP  \\\n",
-       "3273278         46 2015-11-06 08:07:22.780   \n",
-       "5333642         46 2015-11-06 08:07:40.767   \n",
-       "3733243         46 2015-11-06 08:07:51.390   \n",
-       "5904405         46 2015-11-06 08:08:06.003   \n",
-       "5573282         46 2015-11-06 08:08:19.343   \n",
-       "...            ...                     ...   \n",
-       "1613546   55314751 2016-02-28 08:17:15.947   \n",
-       "2925569   55314751 2016-02-28 08:18:10.877   \n",
-       "4068602   55314751 2016-02-28 08:18:41.493   \n",
-       "5013440   55314751 2016-02-28 08:19:59.737   \n",
-       "5012332   55314751 2016-02-28 08:20:07.667   \n",
-       "\n",
-       "                                                  Activity  anomaly  \n",
-       "3273278    /werk_nl/werknemer/mijn_werkmap/doorgeven/taken    False  \n",
-       "5333642  /werk_nl/werknemer/mijn_werkmap/doorgeven/mijn...    False  \n",
-       "3733243  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_d...    False  \n",
-       "5904405  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...    False  \n",
-       "5573282  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...    False  \n",
-       "...                                                    ...      ...  \n",
-       "1613546                         /werk_nl/werknemer/werkmap    False  \n",
-       "2925569    /werk_nl/werknemer/mijn_werkmap/doorgeven/taken    False  \n",
-       "4068602    /werk_nl/werknemer/mijn_werkmap/doorgeven/taken    False  \n",
-       "5013440    /werk_nl/werknemer/mijn_werkmap/doorgeven/taken    False  \n",
-       "5012332    /werk_nl/werknemer/mijn_werkmap/doorgeven/taken    False  \n",
-       "\n",
-       "[7174934 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'labeled_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m labeled_df\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'labeled_df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1268,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1331,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
