--- a/Swapped/Label_Swapped.ipynb
+++ b/Swapped/Label_Swapped.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "5573282  /werk_nl/werknemer/mijn_werkmap/postvak/mijn_b...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,8 +498,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1194,7 @@
        "1381    40   41.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1895,7 +1900,7 @@
        "1381    40   41.000000  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1906,7 +1911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1927,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1936,7 +1941,7 @@
        "161"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1948,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1957,7 +1962,7 @@
        "159"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1969,7 +1974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1979,13 +1984,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save in csv\n",
-    "labeled_df.to_csv(f\"./labeled_data/Swapped.csv\",index=False)\n",
-    "patters_df.to_csv(f\"./gen_patterns/Swapped.csv\",index=False)"
+    "import random\n",
+    "\n",
+    "\n",
+    "def label_80(ids:list[int]) -> list[int]:\n",
+    "  sample = random.sample(ids,k=int(0.8*len(ids)))\n",
+    "  return sample\n",
+    "\n",
+    "sample = label_80(list(sess))\n",
+    "len(sample)\n",
+    "  \n",
+    "labeled_sample = base_df.copy()\n",
+    "labeled_sample[\"anomaly\"] = labeled_sample[\"SessionID\"].apply(lambda x: x in sample)\n",
+    "labeled_sample.to_csv(f\"./labeled_data/Swapped_Sample.csv\",index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # save in csv\n",
+    "# labeled_df.to_csv(f\"./labeled_data/Swapped.csv\",index=False)\n",
+    "# patters_df.to_csv(f\"./gen_patterns/Swapped.csv\",index=False)"
    ]
   }
  ],
